# fileDiff

./: .clang-format  .clang-tidy  .editorconfig  .env  .gitattributes  .gitignore  .gitmodules  .tokeignore  CMakeLists.txt  LICENSE  README.md
cmake/: AddDir.cmake  CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Dependencies.cmake  Doxygen.cmake  GetGitRevisionDescription.cmake  GlobalProjectSettings.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  ProjectOptions.cmake  Sanitizers.cmake  StaticAnalyzers.cmake  SystemLink.cmake  Tests.cmake  Utilities.cmake  VCEnvironment.cmake
config/: CMakeLists.txt  libFileDiff_config.h.in
lib/: CMakeLists.txt
lib/db/: db.c  db.h  db_read.c  db_write.c
lib/hash/: hash_file.c  hash_file.h
lib/logging/: log.c  log.h
lib/platform/: os.h
lib/platform/unix/: unix.c  unix.h
lib/platform/win32/: file.c  file.h  path.c  path.h  win32.c  win32.h
lib/strbuf/: str.h
lib/test/: CMakeLists.txt  test_db.c  test_db_read.c  test_db_write.c
lib/types/: aliases.h
lib/utils/: defs.h
lib/vfs/: file.c  file.h
libs/: CMakeLists.txt
libs/lib_core/: CMakeLists.txt
libs/lib_core/db/: db_read.c
libs/lib_core/hash/: hash_file.c
libs/lib_core/platform/: os.h
libs/lib_core/platform/win32/: file.c  file.h  path.h  win32.h
libs/lib_core/test/: CMakeLists.txt  test_db_read.c  test_db_write.c
libs/lib_core/utils/: defs.h
libs/lib_gui/: CMakeLists.txt
libs/lib_tui/: CMakeLists.txt
libs/lib_tui/test/: CMakeLists.txt
scripts/: build.debug.cmd  build.debug.py  build.release.cmd  build.release.py  clean.cmd  clean.py  configure.debug.cmd  configure.debug.py  configure.release.cmd  configure.release.py  test.cli.cmd  test.gui.cmd  test.lib.cmd
scripts/cmake_alias/: main.py
